# ock

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: build-binaries.yml  ci.yml  release.yml
src/: cli.rs  cli_tests.rs  main.rs  main_tests.rs  selector.rs  selector_tests.rs  utils.rs  utils_tests.rs
tests/: integration_test.rs
