[package]
name = "ock"
version = "0.1.0"
authors=["William W. Marx <oss@marx.sh>"]
description="A simple, fast command line utility for working with table-like data"
license = "MIT"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
regex = "1.7.0"
