[package]
name = "ock"
version = "0.1.0"
authors=["William W. Marx <oss@marx.sh>"]
description="A simple, fast command line utility for working with table-like data"
license = "MIT"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.7.0"
once_cell = "1.19.0"

[dev-dependencies]
tempfile = "3.8.0"
