[package]
name = "ock"
version = "0.1.1"
authors=["William W. Marx <oss@marx.sh>"]
description="A simple, fast command line utility for working with table-like data"
repository = "https://github.com/williamwmarx/ock"
license = "MIT"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.7.0"
once_cell = "1.21.3"
lru = "0.16.0"

[dev-dependencies]
tempfile = "3.8.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ock-v{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-fmt = "tgz"
